# free_pos

./: .gitignore  .npmrc  MANUAL.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: categorias_jarceria_limpieza.csv  categorias_panaderia.csv  categorias_papeleria_regalos.csv  categorias_refaccionaria_auto.csv  categorias_refaccionaria_moto.csv  categorias_tienda_mascotas.csv  clientes.csv  compras.csv  generar_licencias.sql  licencias_supabase.sql  posdb.sql  productos.csv  proveedores.csv  reset_supabase.sql  trial_supabase.sql
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  license.rs  main.rs  models.rs
src/lib/: api.ts  catalogos.ts  format.ts  pdf.ts  ticket.ts  version.ts  xlsx.ts
src/lib/components/: Activar.svelte  ContadorMonedas.svelte  Gate.svelte  Login.svelte  SelectorCatalogo.svelte  SetupAdmin.svelte  Toast.svelte
src/lib/stores/: ajustes.ts  session.ts  toast.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
src/routes/ayuda/: +page.svelte
src/routes/bienvenida/: +page.svelte
src/routes/bitacora/: +page.svelte
src/routes/caducidades/: +page.svelte
src/routes/catalogos/: +page.svelte
src/routes/categorias/: +page.svelte
static/categorias/: categorias_farmacia.csv  categorias_ferreteria_tlapaleria.csv  categorias_miscelanea.csv  categorias_peluqueria_estetica.csv
supabase/functions/: deno.json
tools/: generar_llaves.mjs
(+17 files in other folders)
