[package]
name = "free-pos"
version = "0.0.1"
description = "POS para comercios y negocios"
authors = ["Aqua Studio"]
edition = "2026"

[lib]
name = "free_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de datos local (SQLite embebido, sin dependencias del sistema)
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Hashing de contraseñas de usuarios
argon2 = "0.5"
# Habilita OsRng para generar la sal (Argon2 lo usa vía password_hash::rand_core)
rand_core = { version = "0.6", features = ["getrandom"] }

# Licencias
ed25519-dalek = "2"
base64 = "0.22"
sha2 = "0.10"
machine-uid = "0.5"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
# por compatibilidad con el scaffolding de Tauri
custom-protocol = ["tauri/custom-protocol"]
